* Replace move_lines by a relate

Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)
* Allow to use credit note on statement line

Version 2.4.0 - 2012-04-23
* Bug fixes (see mercurial logs for details)
* Don't deactivate payment wizard on invoice

Version 2.2.0 - 2011-10-24
* Bug fixes (see mercurial logs for details)

Version 2.0.0 - 2011-04-27
* Bug fixes (see mercurial logs for details)
* Add company on statement

Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)

Version 1.6.0 - 2010-05-13
* Bug fixes (see mercurial logs for details)

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)
* Fix digits of start and end balance

Version 1.2.0 - 2009-04-20
* Bug fixes (see mercurial logs for details)

Version 1.0.0 - 2009-05-01
* Initial release